--- a/wp-content/plugins/nu-gutenberg/src/block-library/accordion/style.scss
+++ b/wp-content/plugins/nu-gutenberg/src/block-library/accordion/style.scss
@@ -1,6 +1,7 @@
 /* 
 	sample block - style.scss
 */
+@import '../../../../../themes/nu-start/__precomp/source/css/library';
 
 .wp-block-nu-blocks-accordion {
 	&.is-style-icon-appears-before-title {
