--- a/wp-content/plugins/nu-gutenberg/src/block-library/accordion/style.scss
+++ b/wp-content/plugins/nu-gutenberg/src/block-library/accordion/style.scss
@@ -17,7 +17,7 @@
 					font-size: 20px;
 					line-height: 1;
 					vertical-align: text-top;
-					margin-right: ($base-margin / 2);
+					margin-right: $half-margin;
 					@extend %transition;
 				}
 				&:after {
