--- a/wp-content/themes/nu-start/acf-blocks/datetime-range/datetime-range.css
+++ b/wp-content/themes/nu-start/acf-blocks/datetime-range/datetime-range.css
@@ -374,6 +374,7 @@ input[type=search] {
   box-sizing: inherit;
 }
 
+/* ... project styles will always load after this ... */
 .nu__datetime {
   display: flex;
   flex-flow: column nowrap;
