--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/posts-grid.css
@@ -375,6 +375,7 @@ input[type=search] {
   box-sizing: inherit;
 }
 
+/* ... project styles will always load after this ... */
 div.filteringform {
   padding: 32px 32px;
   margin: 0 0 64px 0;
