--- a/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/_overrides/src/_hotfixing.scss
@@ -6,3 +6,23 @@
 		}
 	}
 }
+
+.nu_section--similar-events {
+	margin-top: $margin_4x;
+
+	> .wp-block-group.alignfull.has-background:last-child {
+		position: relative;
+		&:before {
+			content: "";
+			width: 100%;
+			height: 50%;
+			position: absolute;
+			background-color: black;
+			bottom: 0;
+			left: 0;
+			z-index: -1;
+		}
+
+		background-color: transparent !important;
+	}
+}
