--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
@@ -187,7 +187,7 @@ body.wp-admin {
 	.grid-item {
 		@include nu__grid_item_cover_ratios();
 		@include nu__grid_item_orientation();
-		
+		background-color: white;
 		> a {
 			&.contains-clickable-area {
 				border: none 0;
