--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_banner_type-b.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/heros/_banner_type-b.scss
@@ -10,6 +10,10 @@
 		h2 {
 			margin: 5px 0 0 -2px;
 		}
+
+		.wp-block-buttons {
+			margin-top: $margin_2x;
+		}
 	}
 
 	.wp-block-cover__inner-container {
