--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-news.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_nu-news.scss
@@ -2,7 +2,7 @@
 
 */
 
-.nu_posts-grid .nu__grid .grid-item.nu_events {
+.nu_posts-grid .nu__grid .grid-item.nu_news {
 
 	// ? the date-time block is not loading this properly idk why
 	// todo: fix this so its DRY
