--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/content-types/_event-single.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/content-types/_event-single.scss
@@ -1,10 +1,32 @@
-.wp-block-group.event-content-container {
-	.wp-block-group.event-item-sidebar.is-style-card {
-		@include boxshadow(1);
-		padding: $margin_2x;
+
+body.single-nu_events {
+
+	.wp-block-columns.is-event-item-content {
+
+		.wp-block-group.event-item-sidebar {
+			padding: $margin_4x;
+			max-width: 400px;
+		}
+		
+		.wp-block-post-featured-image {
+			margin: $margin_4x 0;
+		}
 
 		.wp-block-buttons:last-child {
-			margin-top: $margin_6x;
+			.wp-block-button {
+				margin: 0;
+			}
 		}
+	}
+}
+
+.wpforms-field {
+	position: relative;
+	.wpforms-field-label {
+		position: absolute;
+		top: 0;
+		left: 32px;
+		padding: 0 16px;
+		background-color: black;
 	}
 }
