--- a/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.css
+++ b/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.css
@@ -105,7 +105,8 @@ abbr[title] {
   /* 1 */
   text-decoration: underline;
   /* 2 */
-  text-decoration: underline dotted;
+  -webkit-text-decoration: underline dotted;
+          text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -375,73 +376,26 @@ input[type=search] {
 }
 
 /* ... project styles will always load after this ... */
-.nu__datetime {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-}
-.nu__datetime span {
-  letter-spacing: 0;
-  font-weight: normal;
-}
-.nu__datetime .nu__datetime-times {
+.nu__breadcrumbs {
   position: relative;
+  z-index: 1;
+  display: block;
+  width: 100%;
+  margin: 32px auto 0 auto;
+  padding: 16px;
+  float: none !important;
 }
-.nu__datetime .nu__datetime-times:before {
-  content: "\e8b5";
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  line-height: inherit;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  vertical-align: middle;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-feature-settings: "liga";
-  -moz-font-feature-settings: "liga";
-  -moz-osx-font-smoothing: grayscale;
+.nu__breadcrumbs.textalign-center {
+  text-align: center;
 }
-.nu__datetime .nu__datetime-dates {
-  margin-top: 16px;
-  position: relative;
+.nu__breadcrumbs.textalign-right {
+  text-align: right;
 }
-.nu__datetime .nu__datetime-dates:before {
-  content: "\e878";
-  font-family: "Material Icons";
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  line-height: inherit;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  vertical-align: middle;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  font-feature-settings: "liga";
-  -moz-font-feature-settings: "liga";
-  -moz-osx-font-smoothing: grayscale;
+.nu__breadcrumbs:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-.nu__datetime .nu__datetime-times,
-.nu__datetime .nu__datetime-dates {
-  margin: 8px 0 0 0;
-}
-.nu__datetime .nu__datetime-times:first-child,
-.nu__datetime .nu__datetime-dates:first-child {
-  margin: 0;
-}
-.nu__datetime .nu__datetime-times:before,
-.nu__datetime .nu__datetime-dates:before {
-  vertical-align: text-bottom;
-  display: inline-block;
-  font-size: 16px;
-  margin-right: 8px;
-  line-height: 1;
+.nu__breadcrumbs.wide {
+  max-width: 90%;
 }
