--- a/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/content-types/_news-item--single.scss
+++ b/wp-content/themes/nu-start/__precomp/source/css/gutenberg/patterns/content-types/_news-item--single.scss
@@ -41,6 +41,12 @@ body.nu_news-template-default.single-nu_news {
 				> :first-child:not(.wp-block-pullquote__citation)::before {
 					display: none;
 				}
+				cite {
+					text-transform: none;
+					strong {
+						text-transform: uppercase;
+					}
+				}		
 			}
 		}
 
