--- a/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
+++ b/wp-content/themes/nu-start/acf-blocks/posts-grid/src/_grid.scss
@@ -99,8 +99,6 @@ body.wp-admin {
 		padding-left: 0;
 	}
 
-	
-	
 	.grid-item {
 		position: relative;
 		border: 1px solid $grey_4;
@@ -129,11 +127,19 @@ body.wp-admin {
 		flex-flow: column nowrap;
 		position: relative;
 
+		> :last-child {
+			margin-bottom: 0;
+		}
+		> :first-child {
+			margin-top: 0;
+		}
+		
+
 		.featured-tags {
 			margin: 0;
 		}
 		.post-title {
-			margin: $base-margin 0 0 0;
+			margin: 0 0 0 0;
 		}
 		.post-excerpt {
 			font-size: 14px;
@@ -178,7 +184,6 @@ body.wp-admin {
 }
 // restrict to this acf-block
 .nu_posts-grid {
-	
 	.nu__grid {
 		@include nu__responsive_grid_layout();
 	}
@@ -188,6 +193,14 @@ body.wp-admin {
 		@include nu__grid_item_cover_ratios();
 		@include nu__grid_item_orientation();
 		background-color: white;
+
+		@extend %transition;
+		@include nu__boxshadow(2);
+		&:hover,
+		&:focus {
+			@include nu__boxshadow(5);
+		}
+
 		> a {
 			&.contains-clickable-area {
 				border: none 0;
