--- a/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.scss
+++ b/wp-content/themes/nu-start/acf-blocks/breadcrumbs/breadcrumbs.scss
@@ -9,10 +9,9 @@
 	z-index: 1;
 	display: block;
 	width: 100%;
-	margin: $margin_2x auto 0 auto;
+	margin: $base-margin auto 0 auto;
 	padding: $base-margin;
 	float: none !important;
-
 	&.textalign-center {
 		text-align: center;
 	}
@@ -24,5 +23,27 @@
 
 	&.wide {
 		max-width: 90%;
+	}
+
+}
+
+div.breadcrumbs[typeof="BreadcrumbList"] {
+	font-size: 12px;
+
+	a {
+		border-bottom: 1px solid transparent;
+		&:hover,
+		&:focus {
+			border-bottom: 1px solid black;
+		}
+	}
+
+	span.material-icons-outlined {
+		display: inline-block;
+		vertical-align: middle;
+		font-size: 14px;
+		line-height: 14px;
+		margin: 0 ($half-margin * 0.5);
+		border-bottom: 1px solid transparent;
 	}
 }
